# rust-CAN

./: .fusa-evidence.json  .fusa-hara.json  .fusa-iec62443.json  .fusa-problems.json  .fusa-reqs.json  .fusa.json  ARCHITECTURE.md  CODING_STANDARD.md  CONTRIBUTING.md  Cargo.toml  INCIDENT-RESPONSE.md  README.md  ROADMAP.md  SAFETY_PLAN.md  SECURITY.md  fmea.json  fusa-llr.json  requirements.json  safety-case.json  safety-case.md  sbom.json  tara.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
src/: adapt.rs  base64_serde.rs  bus.rs  crc.rs  error.rs  frame.rs  lib.rs  relay.rs
src/dbc/: mod.rs
src/isotp/: mod.rs
src/j1939/: mod.rs
src/mock/: mod.rs
src/obdii/: mod.rs
src/recorder/: mod.rs
src/safety/: hmac_auth.rs  mod.rs
src/socketcan/: mod.rs
src/uds/: mod.rs
src/virtual_bus/: mod.rs
testdata/relay-vectors/: can-fd-extended-frame.json  can-standard-frame.json  can-xl-frame.json
testdata/relay-vectors/errors/: can-fd-xl-mutually-exclusive.json  can-rtr-with-fd.json  can-standard-id-overflow.json  can-xl-priority-id-overflow.json
tests/: integration_test.rs
tool-qualification/: rsfusa-tql2.md  rustc-tql3.md
