[package]
name = "rust-can"
version = "0.2.0"
edition = "2021"
description = "rust-CAN: Rust library for CAN bus — virtual bus, SocketCAN, DBC parser, ISO-TP, J1939, CAN FD, and safety E2E protection."
license = "MPL-2.0"
repository = "https://github.com/SoundMatt/rust-CAN"
homepage = "https://github.com/SoundMatt/rust-CAN"
keywords = ["can", "canbus", "automotive", "embedded", "relay"]
categories = ["embedded", "network-programming", "asynchronous"]
rust-version = "1.75"

[lib]
name = "rust_can"
path = "src/lib.rs"

[[bin]]
name = "rust-can"
path = "src/bin/main.rs"

[features]
## Enables `HmacSha256Auth` — a concrete `MessageAuthenticator` using HMAC-SHA256.
## Required for ISO/SAE 21434 CAL-3 security-level integrity (REQ-SEC-006).
hmac-auth = ["dep:hmac", "dep:sha2"]

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
crc = "3"
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
